Texture paint: Apply Camera Image crash when selecting a image #95787

Closed
opened 2022-02-14 22:07:02 +01:00 by edmund · 14 comments
First-time contributor

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-12 19:13, hash: 52be063012, 2.83. 2.92

Short description of error
Clicking this button and selecting an image crashes blender, no matter the source texture or target texture. Packed or not.
The first time I used this button it worked, every subsequent use has crashed blender.

Exact steps for others to reproduce the error

  • Go to texture paint mode
  • Set the texture slot Mode to Single Image
  • Create image and make it active for texture painting
  • Click Tools > Options > External >Apply Camera Image button and select a different image.

image.png
project_texture_bug.crash.txt
project_texture_bug_17252_autosave.blend

**Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-12 19:13, hash: `52be063012`, 2.83. 2.92 **Short description of error** Clicking this button and selecting an image crashes blender, no matter the source texture or target texture. Packed or not. The first time I used this button it worked, every subsequent use has crashed blender. **Exact steps for others to reproduce the error** * Go to **texture paint** mode * Set the texture slot Mode to **Single Image** * **Create image** and make it active for texture painting * Click Tools > Options > External >**Apply Camera Image** button and select a different image. ![image.png](https://archive.blender.org/developer/F12867310/image.png) [project_texture_bug.crash.txt](https://archive.blender.org/developer/F12867347/project_texture_bug.crash.txt) [project_texture_bug_17252_autosave.blend](https://archive.blender.org/developer/F12867348/project_texture_bug_17252_autosave.blend)
Author
First-time contributor

Added subscriber: @ed-1

Added subscriber: @ed-1
First-time contributor

#95409 was marked as duplicate of this issue

#95409 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks you for clear instructions. I can confirm.
Seems long standing issue as I can even get the crash on previous versions (2.83, 2.92 etc)

blender.exe         :0x00007FF7672717E0  texture_paint_camera_project_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:6062
blender.exe         :0x00007FF7657E6290  wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1335
blender.exe         :0x00007FF7657E4F70  wm_operator_call_internal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1564
blender.exe         :0x00007FF7657D70C0  WM_operator_name_call_ptr C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1578
blender.exe         :0x00007FF7657D71E0  WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1766
blender.exe         :0x00007FF76604EA00  ui_apply_but_funcs_after C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:1012
blender.exe         :0x00007FF766072790  ui_popup_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:11475
blender.exe         :0x00007FF7657E2040  wm_handler_ui_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:698
blender.exe         :0x00007FF7657E3930  wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3025
blender.exe         :0x00007FF7657E23D0  wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3145
blender.exe         :0x00007FF7657DC160  wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3675
blender.exe         :0x00007FF7657B1700  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626
blender.exe         :0x00007FF7657A91A0  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:548
blender.exe         :0x00007FF7682EF240  invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79
blender.exe         :0x00007FF7682EEFF0  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
blender.exe         :0x00007FF7682EEFD0  __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331
blender.exe         :0x00007FF7682EF300  mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17
KERNEL32.DLL        :0x00007FFAD6AF7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFAD8402630  RtlUserThreadStart```
Thanks you for clear instructions. I can confirm. Seems long standing issue as I can even get the crash on previous versions (2.83, 2.92 etc) ```lines=10 blender.exe :0x00007FF7672717E0 texture_paint_camera_project_exec C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:6062 blender.exe :0x00007FF7657E6290 wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1335 blender.exe :0x00007FF7657E4F70 wm_operator_call_internal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1564 blender.exe :0x00007FF7657D70C0 WM_operator_name_call_ptr C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1578 blender.exe :0x00007FF7657D71E0 WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1766 blender.exe :0x00007FF76604EA00 ui_apply_but_funcs_after C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:1012 blender.exe :0x00007FF766072790 ui_popup_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:11475 blender.exe :0x00007FF7657E2040 wm_handler_ui_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:698 blender.exe :0x00007FF7657E3930 wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3025 blender.exe :0x00007FF7657E23D0 wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3145 blender.exe :0x00007FF7657DC160 wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3675 blender.exe :0x00007FF7657B1700 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:626 blender.exe :0x00007FF7657A91A0 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:548 blender.exe :0x00007FF7682EF240 invoke_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:79 blender.exe :0x00007FF7682EEFF0 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 blender.exe :0x00007FF7682EEFD0 __scrt_common_main d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:331 blender.exe :0x00007FF7682EF300 mainCRTStartup d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp:17 KERNEL32.DLL :0x00007FFAD6AF7020 BaseThreadInitThunk ntdll.dll :0x00007FFAD8402630 RtlUserThreadStart```
Member

Added subscriber: @Olliver

Added subscriber: @Olliver
Pratik Borhade changed title from Crash when clicking Texture Paint > Side bar > Tools > Options > External > Apply Camera Image & selecting an image. to Texture paint: Apply Camera Image crash when selecting a image 2022-02-15 05:51:59 +01:00
First-time contributor

Thanks for opening this as my report was closed. The sample file request slipped through my mailbox

Thanks for opening this as my report was closed. The sample file request slipped through my mailbox
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2022-02-15 15:36:03 +01:00
Member

This does not happen with any image, but with images that have ID properties.
ID properties are used to store view projection matrices (e.g. for reprojection with Image from View or Quick Edit), but of course they can be used for anything else, too.
The images in this file have ID properties from kitops for example.
So the crash can reliably be reproduced with any image doing the following:

bpy.data.images['myImage']['myIDprop'] = "foo"

This would lead code in texture_paint_camera_project_exec to think the needed view_data is on the image (but in reality it was just some other IDprop.

Valid view_data can easily be checked though, fix incoming.

This does not happen with **any** image, but with images that have ID properties. ID properties are used to store view projection matrices (e.g. for reprojection with `Image from View` or `Quick Edit`), but of course they can be used for anything else, too. The images in this file have ID properties from kitops for example. So the crash can reliably be reproduced with **any** image doing the following: ``` bpy.data.images['myImage']['myIDprop'] = "foo" ``` This would lead code in `texture_paint_camera_project_exec` to think the needed `view_data` is on the image (but in reality it was just some other IDprop. Valid `view_data` can easily be checked though, fix incoming.
First-time contributor

This issue was referenced by 574f685855

This issue was referenced by 574f685855e32d639f1ad7b2e8dd788ff291568d
First-time contributor

This issue was referenced by 6d6bb04c19

This issue was referenced by 6d6bb04c19fa9e1a1a21ad2deafb6f008d7a4eb9
First-time contributor

This issue was referenced by 232d5d3f13

This issue was referenced by 232d5d3f13479b5bddd44e3e73c94a2b419ea0fa
First-time contributor

Thanks @lichtwerk ! 👍

Thanks @lichtwerk ! 👍
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95787
No description provided.